--- a/2018-11-05.md
+++ b/2018-11-05.md
@@ -7,7 +7,7 @@ tags: archives
 
 ---
 
-### 1.IOS动态节点 $(document).click() 点击无效111
+### 1.IOS动态节点 $(document).click() 点击无效
 解决方法
 1.使用a或者button标签
 2.给点击的dom上加css代码cursor:pointer;
