--- a/2018-11-02.md
+++ b/2018-11-02.md
@@ -2,8 +2,8 @@
 
 title: Vue填坑之路
 date: 2018-11-02 17:24:22
-categories: 文章分类
-tags: 文章标签
+categories: 日常积累
+tags: archives
 
 ---
 ## Vue父子组件之间传值问题
