--- a/2018-11-01.md
+++ b/2018-11-01.md
@@ -2,8 +2,8 @@
 
 title: JS原型链
 date: 2018-11-01 17:24:22
-categories: 文章分类
-tags: 文章标签
+categories: 日常积累
+tags: archives
 
 ---
 # 通过以下4大类去认识js原型链类
