--- a/_posts/2018-11-05.md
+++ b/_posts/2018-11-05.md
@@ -19,3 +19,4 @@ tags: archives
 -webkit-tab-highlight-color:rgba(0,0,0,0);
 //设置背景高亮的颜色
 -webkit-tab-highlight-color: red;
+移动端overflow css属性会影响到js设置滚动你到顶部的兼容性，安卓会不能滚动，ios没有动画效果滚动。
